RESOLVED FIXED173196
REGRESSION (r217870): Null deref under PageOverlayController::uninstallPageOverlay using find in page
https://bugs.webkit.org/show_bug.cgi?id=173196
Summary REGRESSION (r217870): Null deref under PageOverlayController::uninstallPageOv...
Tim Horton
Reported 2017-06-09 18:01:33 PDT
REGRESSION (r217870): Null deref under PageOverlayController::uninstallPageOverlay using find in page
Attachments
Patch (6.98 KB, patch)
2017-06-09 18:01 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-06-09 18:01:56 PDT
Tim Horton
Comment 2 2017-06-09 18:06:18 PDT
WebKit Commit Bot
Comment 3 2017-06-11 09:03:45 PDT
Comment on attachment 312521 [details] Patch Clearing flags on attachment: 312521 Committed r218068: <http://trac.webkit.org/changeset/218068>
WebKit Commit Bot
Comment 4 2017-06-11 09:03:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.