REGRESSION (r217870): Null deref under PageOverlayController::uninstallPageOverlay using find in page https://bugs.webkit.org/show_bug.cgi?id=173196 <rdar://problem/32686871>

Reviewed by Simon Fraser.

Source/WebCore:

* page/TextIndicator.cpp:
(WebCore::initializeIndicator):
* page/TextIndicator.h:
The change in r217870 had an expected but not thought-through side-effect
that you cannot create a TextIndicator for far-off-screen elements. This
is a problem for find-in-page, which uses TextIndicator to paint the yellow
highlight before scrolling it into view.

Bring back TextIndicatorOptionDoNotClipToVisibleRect and revert to it for
find in page, since it needs different behavior than something like
drag and drop, which always operates on content near the visible viewport.

Source/WebKit2:

* WebProcess/WebPage/ios/FindControllerIOS.mm:
(WebKit::FindController::updateFindIndicator):
The reason this caused a crash instead of just a missing indicator
is that FindControllerIOS would early return after uninstalling
the old overlay, before installing a new one, and leave m_isShowingFindIndicator
set to true. Instead, reset it (and m_findIndicatorOverlay, which
we would never re-use but might as well be freed immediately).

This likely already crashed in other less reproducible cases where a
TextIndicator was not created for a find match, so clean it up.


Canonical link: https://commits.webkit.org/190080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218068 268f45cc-cd09-0410-ab3c-d52691b4dbfc