Source/WebCore/page/TextIndicator.h
@@ -81,17 +81,21 @@ enum TextIndicatorOption : uint16_t {
     // If this option is set, expand the clip rect outward so that slightly offscreen content will be included.
     TextIndicatorOptionExpandClipBeyondVisibleRect = 1 << 7,
 
+    // By default, TextIndicator clips the indicated rects to the visible content rect.
+    // If this option is set, do not clip to the visible rect.
+    TextIndicatorOptionDoNotClipToVisibleRect = 1 << 8,
+
     // Include an additional snapshot of everything in view, with the exception of nodes within the currently selected range.
-    TextIndicatorOptionIncludeSnapshotOfAllVisibleContentWithoutSelection = 1 << 8,
+    TextIndicatorOptionIncludeSnapshotOfAllVisibleContentWithoutSelection = 1 << 9,
 
     // By default, TextIndicator uses text rects to size the snapshot. Enabling this flag causes it to use the bounds of the
     // selection rects that would enclose the given Range instead.
     // Currently, this is only supported on iOS.
-    TextIndicatorOptionUseSelectionRectForSizing = 1 << 9,
+    TextIndicatorOptionUseSelectionRectForSizing = 1 << 10,
 
     // Compute a background color to use when rendering a platter around the content image, falling back to a default if the
     // content's background is too complex to be captured by a single color.
-    TextIndicatorOptionComputeEstimatedBackgroundColor = 1 << 10,
+    TextIndicatorOptionComputeEstimatedBackgroundColor = 1 << 11,
 };
 typedef uint16_t TextIndicatorOptions;
 
